--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Giovanna Couto",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "pg": "^8.13.1",
+    "sequelize": "^6.37.5"
   }
 }
